--- a/templates/users/musicLibrary/base.html.twig
+++ b/templates/users/musicLibrary/base.html.twig
@@ -40,7 +40,7 @@
                             <div class="card shadow mb-4">
                                 <!-- Card Body -->
                                 <div class="card-body music">
-                                    <div class="row mr-0 ml-0 text-center text-lg-left" id="mySong">
+                                    <div class="row mr-0 ml-0 text-center" id="mySong">
 
                                         <!--<div class="col-lg-3 col-md-4 col-6" >
                                             <a href="#" class="d-block mb-4 h-100">
