--- a/templates/users/timeline/base.html.twig
+++ b/templates/users/timeline/base.html.twig
@@ -30,7 +30,7 @@
                     <form>
                         <div class="row mt-3">
                             <div class="col-md-6 d-flex justify-content-end">
-                                <a class="btn mt-auto mb-4" role="button" id="bouton-ajout">Ajouter une musique</a>
+                                <a class="btn mt-auto mb-4" role="button"  onclick="myZik()" id="bouton-ajout">Ajouter une musique</a>
                             </div>
                             <div class="col-md-6 d-flex flex-column justify-content-center mt-3">
                                 <span class="stopTimeline"></span>
@@ -43,7 +43,27 @@
                         </div>
                         <div class="row col-md-12 mt-4">
                             <div class="field1 d-flex justify-content-center">
-                                 <input class="form-control music"  value="" id="timeline">
+                                
+                                <div class="card shadow mb-4 w-100">
+                                    <div class='card-body planif1' id="timeline">
+                                        <div class="row text-center" id="timeline">
+                                            <!--<div class="col-lg-3 col-md-4 col-6 border-right" >
+                                                <a href="#" class="d-block mb-4 h-100">
+                                                    <img src="https://i.pinimg.com/736x/06/2a/2c/062a2c6142605b83c340080137b84e57.jpg" class="img-fluid img-thumbnail music">
+                                                    <p class="text-center">music mp3</p>
+                                                    <span class="delete">&times;</span>
+                                                </a>
+                                            </div>
+                                            <div class="col-lg-3 col-md-4 col-6 border-right" >
+                                                <a href="#" class="d-block mb-4 h-100">
+                                                    <img src="https://i.pinimg.com/736x/06/2a/2c/062a2c6142605b83c340080137b84e57.jpg" class="img-fluid img-thumbnail music">
+                                                    <p class="text-center">music mp3</p>
+                                                    <span class="delete">&times;</span>
+                                                </a>
+                                            </div>-->
+                                        </div><!--fin row-->
+                                    </div><!--/cardbody-->
+                                </div><!--/cardshadow-->
                             </div>  
                         </div>
                          <div class="row col-md-5 d-flex justify-content-end mt-4">
@@ -51,8 +71,29 @@
                         </div>
                         <div class="row col-md-12 mt-4 mb-5">
                             <div class="field2 d-flex justify-content-center">
-                                 <input class="form-control music"  value="" id="timeline2">
-                            </div>  
+
+                                <div class="card shadow mb-4 w-100">
+                                    <div class='card-body planif2' id="timeline2">
+                                        <div class="row text-center" id="timeline2">
+                                            <!--<div class="col-lg-3 col-md-4 col-6 border-right" >
+                                                <a href="#" class="d-block mb-4 h-100">
+                                                    <img src="https://i.pinimg.com/736x/06/2a/2c/062a2c6142605b83c340080137b84e57.jpg" class="img-fluid img-thumbnail music">
+                                                    <p class="text-center">music mp3</p>
+                                                    <span class="delete">&times;</span>
+                                                </a>
+                                            </div>
+                                            <div class="col-lg-3 col-md-4 col-6 border-right" >
+                                                <a href="#" class="d-block mb-4 h-100">
+                                                    <img src="https://i.pinimg.com/736x/06/2a/2c/062a2c6142605b83c340080137b84e57.jpg" class="img-fluid img-thumbnail music">
+                                                    <p class="text-center">music mp3</p>
+                                                    <span class="delete">&times;</span>
+                                                </a>
+                                            </div>-->
+                                        </div><!--fin row-->
+                                    </div><!--/cardbody-->
+                                </div><!--/cardshadow-->
+
+                            </div> <!--/field2-->
                         </div>
                         <div class="row col-md-12 d-flex align-items-center justify-content-center mt-4 ml-2">
                             <input type="button" class="form-control border-0 font-weight-bold text-white" style="background-color:#EF0051; width:200px" value="Valider la planification">
