recuperation et edition des signalements

--- a/templates/admin/signalements/base.html.twig
+++ b/templates/admin/signalements/base.html.twig
@@ -44,9 +44,9 @@
                                     <table class="table table-bordered" id="signal-table" width="100%" cellspacing="0">
                                         <thead>
                                             <tr>
-                                                <th>Avatar</th>
+                                                <th>Identifiant de la chaine</th>
                                                 <th>Nom de la chaîne</th>
-                                                <th>Status</th>
+                                                <th>Nombre de signalements</th>
                                                 <th>Management</th>
                                             </tr>
                                         </thead>
@@ -83,6 +83,8 @@
 
     </div>
 <!-- End of Page Wrapper -->
+
+    {% include 'admin/Signalements/editSignal.html.twig' %}
 
 <!-- Scroll to Top Button-->
 <a class="scroll-to-top rounded" href="#page-top">
