correction du css et de quelque bug cote admin channel

--- a/templates/admin/channel/editChannel/script.html.twig
+++ b/templates/admin/channel/editChannel/script.html.twig
@@ -104,7 +104,7 @@ $(document).ready(function() {
                 if(response != undefined)
                 {
                     $('nbStream').html(response.stream_crée);
-                    console.log(response.stream_crée);
+                    console.log(response);
                 }
                 console.log(response);
 
@@ -130,7 +130,7 @@ $(document).ready(function() {
                 if(response != undefined)
                 {
                     $('#nbFavoris').html(response.favoris);
-                    console.log(response.favoris);
+                   // console.log(response);
                 }
                 console.log(response);
 
@@ -155,7 +155,7 @@ $(document).ready(function() {
                 if(response != undefined)
                 {
                     $('#nbPlan').html(response.nombre_plannification);
-                    console.log(response.nombre_plannification.message);
+                    //console.log(response);
                 }
                 console.log(response);
 
