--- a/templates/admin/channel/removeChannel/modal.html.twig
+++ b/templates/admin/channel/removeChannel/modal.html.twig
@@ -1,3 +1,6 @@
+    <script type="javascript">
+        window.onload = load;
+    </script>
     <div class="modal fade" id="bannirModal" role="dialog">
     <div class="modal-dialog remove">
         <div class="modal-content removeUser">
@@ -7,10 +10,10 @@
             <div class="modal-body login-body mb-4">
                 <div class="row d-flex flex-column align-items-center justify-content-center">
 
-                    <div class="row col-xl-12 alert alert-success"  style="display: none; font-size: 0.7em;" id="messageSucces" role="alert"></div>
+                    <div class="row col-xl-12 alert alert-success"  style="display: none; font-size: 0.7em; width: 200px;" id="messageSucces" role="alert"></div>
 
                     <div class="col-sm-6 d-flex flex-column align-items-center justify-content-center">
-                        <p class="mt-2 text-black d-lg-inline text-center">Êtes-vous sûr de vouloir
+                        <p class="mt-2 text-black d-lg-inline text-center" style="width: 200px; font-size: 1.1rem">Êtes-vous sûr de vouloir
                         bannir cette chaine ?</p>
                     </div>
                 </div>
