--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -108,28 +108,28 @@
                         </div>
                     </div>
 
-                    <!-- Nombre d’utilisateurs Card Example -->
+                    <!-- Total d'ecoute Card Example -->
                     <div class="col-xl-3 col-md-6 mb-4">
                         <div class="card shadow h-80 border-raduis py-2">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col mr-2 mb-2 d-flex flex-column align-items-center justify-content-center">
-                                    <div class="text-purple justify-content-center">Total de signalements</div>
-                                    <div id="nombre_dutilisateurs" class="h5 mb-0 font-weight-bold text-gray-800"></div>
+                                    <div class="text-purple justify-content-center">Total d'ecoute</div>
+                                    <div id="nombre_decoute" class="h5 mb-0 font-weight-bold text-gray-800"></div>
                                 </div>
                             </div>
                         </div>
                         </div>
                     </div>
 
-                    <!-- Nombre d’utilisateurs Card Example -->
+                    <!-- Total d'écoute stream Card Example -->
                     <div class="col-xl-3 col-md-6 mb-4">
                         <div class="card shadow h-80 border-raduis py-2">
                         <div class="card-body">
                             <div class="row">
                                 <div class="col mr-2 mb-2 d-flex flex-column align-items-center justify-content-center">
-                                    <div class="text-principal justify-content-center">Total chaîne bannie</div>
-                                    <div id="nombre_dutilisateurs" class="h5 mb-0 font-weight-bold text-gray-800"></div>
+                                    <div class="text-principal justify-content-center">Total d'écoute stream</div>
+                                    <div id="total_ecoute_stream" class="h5 mb-0 font-weight-bold text-gray-800"></div>
                                 </div>
                             </div>
                         </div>
