--- a/templates/admin/channel/base.html.twig
+++ b/templates/admin/channel/base.html.twig
@@ -14,12 +14,12 @@
             <div class="container-fluid">
 
                 <div class="row mt-4 mb-2">
-                    <div class="col-xl-2">
+                    <div class="col-xl-12">
                         <h4 class="h4 text-gray-800">Chaînes</h4>
                     </div>
-                    <div class="col-xl-10 d-flex"> 
+                    <div class="col-xl-12 d-flex"> 
 
-                        <div class="conteneur d-flex flex-column align-items-center justify-content-center">
+                        <div class="conteneur d-flex flex-column align-items-center justify-content-center mr-auto ml-auto">
                             <div class="row recherche">
                                 <div class="col">
                                     <div class="form-group has-search ">
@@ -53,9 +53,9 @@
                                     
                                     </tbody>
                                     </table> 
-                                    <div style="height: auto; text-align: center" class="chart-area" id="pagination_data">
-                                       
-                                    </div> 
+                                    <div class="row col-md-12 text-center justify-content-lg-center">
+                                        <ul class="pagination" id="myPager"></ul>
+                                    </div>
                                   </div>
                                 </div>                                
                             </div>
