--- a/templates/superAdmin/base.html.twig
+++ b/templates/superAdmin/base.html.twig
@@ -114,8 +114,8 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col mr-2 mb-2 d-flex flex-column align-items-center justify-content-center">
-                                    <div class="text-info justify-content-center">Total de signalements</div>
-                                    <div id="nombre_dutilisateurs" class="h5 mb-0 font-weight-bold text-gray-800"></div>
+                                    <div class="text-info justify-content-center">Total d'écoute</div>
+                                    <div id="nombre_decoute" class="h5 mb-0 font-weight-bold text-gray-800"></div>
                                 </div>
                             </div>
                         </div>
@@ -128,8 +128,8 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col mr-2 mb-2 d-flex flex-column align-items-center justify-content-center">
-                                    <div class="text-principal justify-content-center">Total chaîne bannie</div>
-                                    <div id="nombre_dutilisateurs" class="h5 mb-0 font-weight-bold text-gray-800"></div>
+                                    <div class="text-principal justify-content-center">Total d'écoute stream</div>
+                                    <div id="total_ecoute_stream" class="h5 mb-0 font-weight-bold text-gray-800"></div>
                                 </div>
                             </div>
                         </div>
