--- a/templates/superAdmin/user/index.html.twig
+++ b/templates/superAdmin/user/index.html.twig
@@ -59,8 +59,8 @@
                                                 
                                         </tbody>
                                     </table>
-                                    <div class="pagination mt-2 d-flex justify-content-center" id="pagination_data">
-                                      
+                                    <div class="row col-md-12 text-center justify-content-lg-center mt-2">
+                                        <ul class="pagination" id="myPager"></ul>
                                     </div>
                                     <a href="{{path('superadmin.users.new')}}" class="btn add_user">+</a>
                                   </div>
