--- a/templates/admin/settings/base.html.twig
+++ b/templates/admin/settings/base.html.twig
@@ -27,7 +27,7 @@
                     <div class="row col-xl-12 alert alert-success text-center" style="display: none;" id="mycompte" role="alert"></div>
 
                     <!--img logo-->
-                   <div class="image-upload">
+                   <div class="image-upload d-none">
                         <label for="cameraInput">
                             <img src="https://firebasestorage.googleapis.com/v0/b/webradio-stream.appspot.com/o/User%2F70element-1.png?alt=media&token=fa8fa419-9e5f-4738-b2de-85536002a0d1" alt="avatar" id="profil">
                             <i class="far fa-edit" style="font-size:50px; color: #EF0051"></i>
@@ -35,8 +35,10 @@
                         <input type="file" accept="image/*" id="cameraInput">
                     </div>
                     <!--input-->
+                    <div class="text-center">
+                        <h1 class="h2 mt-2 text-black">Gestion du compte</h1>
+                    </div> 
 
-        
                     <div class="row mb-5">
                         <div class="col-sm">
                             <div class="form-group settingsAdmin" id="name">
