--- a/templates/admin/signalements/base.html.twig
+++ b/templates/admin/signalements/base.html.twig
@@ -55,9 +55,9 @@
                                     
                                     </tbody>
                                     </table> 
-                                    <div class="pagination mt-2 d-flex justify-content-center" id="pagination_data">
-                                        
-                                    </div>      
+                                    <div class="row col-md-12 text-center justify-content-lg-center">
+                                        <ul class="pagination" id="myPager"></ul>
+                                    </div>     
                                   </div>
                                 </div>                                
                             </div>
