--- a/templates/admin/user/script.html.twig
+++ b/templates/admin/user/script.html.twig
@@ -9,6 +9,123 @@
 <script src="{{ asset('js/sb-admin-2.min.js') }}"></script>
 
 <script>
+
+$.fn.pageMe = function(opts){
+    var $this = this,
+        defaults = {
+            perPage: 7,
+            showPrevNext: false,
+            numbersPerPage: 5,
+            hidePageNumbers: false
+        },
+        settings = $.extend(defaults, opts);
+    
+    var listElement = $this;
+    var perPage = settings.perPage; 
+    var children = listElement.children();
+    var pager = $('.pagination');
+    
+    if (typeof settings.childSelector!="undefined") {
+        children = listElement.find(settings.childSelector);
+    }
+    
+    if (typeof settings.pagerSelector!="undefined") {
+        pager = $(settings.pagerSelector);
+    }
+    
+    var numItems = children.length;
+    var numPages = Math.ceil(numItems/perPage);
+
+    pager.data("curr",0);
+    
+    if (settings.showPrevNext){
+        $('<li class="page-item"><a href="#" class="prev-link page-link">«</a></li>').appendTo(pager);
+    }
+    
+    var curr = 0;
+    while(numPages > curr && (settings.hidePageNumbers==false)){
+        $('<li class="page-item"><a href="#" class="page-link page-compte">'+(curr+1)+'</a></li>').appendTo(pager);
+        curr++;
+    }
+  
+    if (settings.numbersPerPage>1) {
+       $('.page-compte').hide();
+       $('.page-compte').slice(pager.data("curr"), settings.numbersPerPage).show();
+    }
+    
+    if (settings.showPrevNext){
+        $('<li class="page-item"><a href="#" class="next-link page-link">»</a></li>').appendTo(pager);
+    }
+    
+    pager.find('.page-compte:first').addClass('active');
+    pager.find('.prev-link').hide();
+    if (numPages<=1) {
+        pager.find('.next-link').hide();
+    }
+  	pager.children().eq(1).addClass("active");
+    
+    children.hide();
+    children.slice(0, perPage).show();
+    
+    pager.find('li .page-compte').click(function(){
+        var clickedPage = $(this).html().valueOf()-1;
+        goTo(clickedPage,perPage);
+        return false;
+    });
+    pager.find('li .prev-link').click(function(){
+        previous();
+        return false;
+    });
+    pager.find('li .next-link').click(function(){
+        next();
+        return false;
+    });
+    
+    function previous(){
+        var goToPage = parseInt(pager.data("curr")) - 1;
+        goTo(goToPage);
+    }
+     
+    function next(){
+        goToPage = parseInt(pager.data("curr")) + 1;
+        goTo(goToPage);
+    }
+    
+    function goTo(page){
+        var startAt = page * perPage,
+            endOn = startAt + perPage;
+        
+        children.css('display','none').slice(startAt, endOn).show();
+        
+        if (page>=1) {
+            pager.find('.prev-link').show();
+        }
+        else {
+            pager.find('.prev-link').hide();
+        }
+        
+        if (page<(numPages-1)) {
+            pager.find('.next-link').show();
+        }
+        else {
+            pager.find('.next-link').hide();
+        }
+        
+        pager.data("curr",page);
+       
+        if (settings.numbersPerPage>1) {
+       		$('.page-compte').hide();
+       		$('.page-compte').slice(page, settings.numbersPerPage+page).show();
+    	}
+      
+      	pager.children().removeClass("active");
+        pager.children().eq(page+1).addClass("active");
+    
+    }
+};
+
+
+
 $(document).ready(function() {
 
     const token = localStorage.getItem("token");
@@ -52,6 +169,7 @@ $(document).ready(function() {
                 }
                 
                     $("#users-corps").append(mytab);
+                     $("#users-corps").pageMe({pagerSelector:'#myPager',showPrevNext:true,hidePageNumbers:false,perPage:5});
 
                     $('.fa-edit').on("click", function(){
 
