--- a/templates/superAdmin/settings/base.html.twig
+++ b/templates/superAdmin/settings/base.html.twig
@@ -28,7 +28,7 @@
 
                     <!--img logo-->
                    <div class="image-upload">
-                        <label for="cameraInput">
+                        <label for="cameraInput"style="display: none;" >
                             <img src="https://firebasestorage.googleapis.com/v0/b/webradio-stream.appspot.com/o/User%2F70element-1.png?alt=media&token=fa8fa419-9e5f-4738-b2de-85536002a0d1" alt="avatar" id="profil">
                             <i class="far fa-edit" style="font-size:50px; color: #EF0051"></i>
                         </label>
