--- a/templates/superAdmin/signalements/base.html.twig
+++ b/templates/superAdmin/signalements/base.html.twig
@@ -53,9 +53,8 @@
                                     
                                         </tbody>
                                     </table> 
-                                   
-                                    <div class="pagination mt-2 d-flex justify-content-center" id="pagination_data">
-                                      
+                                    <div class="row col-md-12 text-center justify-content-lg-center">
+                                            <ul class="pagination" id="myPager"></ul>
                                     </div>      
                                   </div>
                                 </div>                                
