--- a/templates/superAdmin/user/edit/edit.html.twig
+++ b/templates/superAdmin/user/edit/edit.html.twig
@@ -25,7 +25,7 @@
                         
                         <div class="image-upload">
                             <label for="cameraInput">
-                                <img src="https://firebasestorage.googleapis.com/v0/b/webradio-stream.appspot.com/o/User%2F70element-1.png?alt=media&token=fa8fa419-9e5f-4738-b2de-85536002a0d1" alt="" id="profil">
+                                <img class="rounded-circle" src="https://firebasestorage.googleapis.com/v0/b/webradio-stream.appspot.com/o/User%2F70element-1.png?alt=media&token=fa8fa419-9e5f-4738-b2de-85536002a0d1" alt="" id="profil">
                                 <i class="far fa-edit" style="font-size:50px; color: #EF0051"></i>
                             </label>
                             <input type="file" accept="image/*" id="cameraInput">
