--- a/templates/admin/signalements/script.html.twig
+++ b/templates/admin/signalements/script.html.twig
@@ -198,10 +198,14 @@ String.prototype.rtrim = function() {
                             disable();
                            const signalement_id = $("#update_channel_signalements_id").val();
 
-                                let createUser = inputUsername(usernameShow,inpUser);///todo motif de la chaine a faire et supprression
+                            let usernameShow = $('#format-update').val();
+                                let inpUser = $('#format-update');
+                                let createUser = inputUsername(usernameShow,inpUser);
+                                
                             let data = {
-                                motif: $("#format-update").val()
+                                motif: createUser
                             };
+                          if (createUser !== undefined) {
 
                          $.ajax({
                                type: "PUT",
@@ -219,15 +223,15 @@ String.prototype.rtrim = function() {
                                console.log(err);
                            });
 
-                       });
+                       });// end update
 
                         console.log(signalId);
 
-                    });// modifie
+                    });// modify signal
 
 
-                $('.fa-trash-alt').on("click", function(){
-                    
+                $('.fa-trash-alt').on("click", function(){ // TODO supprression
+                     
                     let signalId = $(this).attr("id");
 
                     $.ajax({
