--- a/templates/superAdmin/channel/editChannel/editChannel.html.twig
+++ b/templates/superAdmin/channel/editChannel/editChannel.html.twig
@@ -26,11 +26,13 @@
                         </div>
                     </div>
                     <div class="main d-flex flex-column align-items-center justify-content-center">
-                    
+
+                          <div class="row col-xl-12 alert alert-success text-center"  style="display: none;" id="updatecompte" role="alert"></div>
+
                         <!--img logo-->
                          <div class="image-upload">
                             <label for="cameraInput">
-                                <img src="https://firebasestorage.googleapis.com/v0/b/webradio-stream.appspot.com/o/User%2F70element-1.png?alt=media&token=fa8fa419-9e5f-4738-b2de-85536002a0d1" alt="img" id="profil">
+                                <img class="rounded-circle" src="https://firebasestorage.googleapis.com/v0/b/webradio-stream.appspot.com/o/User%2F70element-1.png?alt=media&token=fa8fa419-9e5f-4738-b2de-85536002a0d1" alt="img" id="profil">
                                 <i class="far fa-edit" style="font-size:50px; color: #EF0051"></i>
                             </label>
                             <input type="file" accept="image/*" id="cameraInput">
@@ -57,7 +59,7 @@
                     <!-- Content Row -->
                     <div class="row">
 
-<!-- Nombre favoris Card Example -->
+                    <!-- Nombre favoris Card Example -->
                     <div class="col-xl-3 col-md-6 mb-4">
                         <div class="card shadow h-80 border-raduis py-2">
                         <div class="card-body">
