--- a/templates/superAdmin/channel/editChannel/script.html.twig
+++ b/templates/superAdmin/channel/editChannel/script.html.twig
@@ -132,8 +132,8 @@ $(document).ready(function() {
             
                 if(response != undefined)
                 {
-                    $('#nbFavoris').html(response.favoris);
-                    console.log(response.favoris);
+                    //$('#nbFavoris').html(response);
+                    console.log(response);
                 }
                 console.log(response);
 
@@ -158,7 +158,6 @@ $(document).ready(function() {
                 if(response != undefined)
                 {
                     $('#nbPlan').html(response.nombre_plannification);
-                    console.log(response.nombre_plannification.message);
                 }
                 console.log(response);
 
