--- a/templates/superAdmin/channel/script.html.twig
+++ b/templates/superAdmin/channel/script.html.twig
@@ -180,7 +180,7 @@ $(document).ready(function() {
 
                        localStorage.setItem("deleteChannelId", deleteId);
 
-
+                        window.onload = load;
                         console.log(deleteId);
 
                     });
@@ -221,6 +221,8 @@ $(document).ready(function() {
         });// fin delete
 
     }// fin if
+
+
 
 });
 </script>
